--- a/web/public/locales/pt/translation.json
+++ b/web/public/locales/pt/translation.json
@@ -35,7 +35,8 @@
         "noprofession": "Profissão é obrigatório.",
         "usedusername": "Usuário já utilizado.",
         "usedemail": "E-mail já utilizado.",
-        "incorrect": "Nome ou senha incorretos"
+        "incorrect": "Nome ou senha incorretos",
+        "incorrectPassword": "Senha incorreta"
     },
     "error": {
         "email": "Você deve inserir um e-mail válido."
