--- a/web/public/locales/en/translation.json
+++ b/web/public/locales/en/translation.json
@@ -36,7 +36,8 @@
         "usedusername": "Username already used.",
         "usedemail": "Email already used.",
         "incorrect": "Incorrect username or password",
-        "incorrectPassword": "Incorrect password"
+        "incorrectPassword": "Incorrect password",
+        "nodata": "Fill in all fields"
     },
     "error": {
         "email": "You must enter a valid email."
