--- a/web/public/locales/en/translation.json
+++ b/web/public/locales/en/translation.json
@@ -44,7 +44,8 @@
     },
     "success": {
         "edit": "User edited successfully.",
-        "newmission": "Mission added successfully"
+        "newmission": "Mission added successfully.",
+        "deletemission": "Mission deleted successfully."
     },
     "pages": {
         "home": "Home",
