--- a/web/public/locales/pt/translation.json
+++ b/web/public/locales/pt/translation.json
@@ -44,7 +44,8 @@
     },
     "success": {
         "edit": "Usuário editado com sucesso.",
-        "newmission": "Missão adicionada com sucesso."
+        "newmission": "Missão adicionada com sucesso.",
+        "deletemission": "Missão deletada com sucesso."
     },
     "pages": {
         "home": "Início",
