add preview to edit user image

--- a/web/public/locales/en/translation.json
+++ b/web/public/locales/en/translation.json
@@ -25,7 +25,8 @@
         "oldpassword": "Old password",
         "confirmpassword": "Confirm your password",
         "profession": "Profession",
-        "image": "Select image:"
+        "image": "Select image:",
+        "preview": "Preview"
     },
     "validation": {
         "passworddiff": "Password and confirmation password should be the same.",
