--- a/web/public/locales/pt/translation.json
+++ b/web/public/locales/pt/translation.json
@@ -70,6 +70,7 @@
         "monthly": "Missões mensais",
         "unique": "Missões únicas",
         "newmission": "Nova missão",
+        "editmission": "Editar missão",
         "nomissions": "Sem missões"
     },
     "mission": {
