dashboard shows active missions count

--- a/web/public/locales/en/translation.json
+++ b/web/public/locales/en/translation.json
@@ -62,6 +62,7 @@
         "profession": "Profession",
         "experience": "Experience",
         "gold": "Gold",
+        "activemissions": "Active missions",
         "completedmissions": "Completed missions"
     },
     "titles": {
