--- a/web/public/locales/pt/translation.json
+++ b/web/public/locales/pt/translation.json
@@ -54,7 +54,8 @@
     },
     "pages": {
         "home": "Início",
-        "profile": "Perfil"
+        "profile": "Perfil",
+        "store": "Loja"
     },
     "stats": {
         "stats": "Estatísticas",
